--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "connected-react-router": "^5.0.1",
+    "history": "^4.7.2",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-redux": "^5.1.1",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
